tests/asm-link/interpolation-after-string/rgbasm.err
error: syntax error: unexpected identifier
   ╭─[ greeting:1:1 ]
   │
 1 │ hello
   │ ──┬──  
   │   ╰──── expected ",", "+", "-", "*", "/", "%", "++", ...17 others
   │
   ├─[ test.asm:5:11 ]
   │
 5 │ println ""{greeting}
   │           ─────┬────  
   │                ╰────── interpolated here
───╯
error: syntax error: unexpected string
   ╭─[ string:1:1 ]
   │
 1 │ "goodbye"
   │ ────┬────  
   │     ╰────── expected ",", "+", "-", "*", "/", "%", "++", ...17 others
   │
   ├─[ test.asm:8:11 ]
   │
 8 │ println ""{string}""
   │           ────┬───  
   │               ╰───── interpolated here
───╯
2 errors generated.
